force-app/main/default/objects/Touch_Routing_Rule__mdt/Touch_Routing_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Touch Routing Rule</label>
    <pluralLabel>Touch Routing Rules</pluralLabel>
</CustomObject>