force-app/main/default/objects/Touch_Routing_Rule__mdt/fields/Match_Path__c.field-meta.xml
<CustomField>
    <fullName>Match_Path__c</fullName>
    <label>Match Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OCR</fullName>
            </value>
            <value>
                <fullName>ACR</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Domain</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>