force-app/main/default/objects/Touch_Routing_Rule__mdt/fields/Min_Intent_Level__c.field-meta.xml
<CustomField>
    <fullName>Min_Intent_Level__c</fullName>
    <label>Min Intent Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>