force-app/main/default/objects/Touch_Routing_Rule__mdt/fields/Persona_Filter__c.field-meta.xml
<CustomField>
    <fullName>Persona_Filter__c</fullName>
    <label>Persona Filter</label>
    <length>40</length>
    <type>Text</type>
</CustomField>