force-app/main/default/objects/Touch_Routing_Rule__mdt/fields/Require_Same_Account__c.field-meta.xml
<CustomField>
    <fullName>Require_Same_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Require Same Account</label>
    <type>Checkbox</type>
</CustomField>