force-app/main/default/objects/Touch_Routing_Rule__mdt/fields/Require_Topic_Match__c.field-meta.xml
<CustomField>
    <fullName>Require_Topic_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Topic Match</label>
    <type>Checkbox</type>
</CustomField>