force-app/main/default/objects/Touch_Routing_Rule__mdt/fields/Touch_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>Touch_Type_Filter__c</fullName>
    <label>Touch Type Filter</label>
    <length>40</length>
    <type>Text</type>
</CustomField>